fixing code smell